--- a/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
+++ b/manuscrit_G_LEFEBVRE/chap_biologie_du_cancer.tex
@@ -1,7 +1,9 @@
 \documentclass[main.tex]{subfiles}
+\pagestyle{main}
+
 \begin{document}
 \chapter{Le cancer~: aspects biologique et clinique.}\todo[noline]{tumeur en general ou GIST?}
-\mylettrine{L}{a} biologie du cancer est encore à ce jour non entièrement connue. Sa complexité n'étant pas des moindres, on présentera dans ce chapitre uniquement les points clés nécéssaire à l'élaboration des modèles mathématiques présentés dans ce manuscrit. On présentera tout d'abord sommairement comment croît une tumeur, puis comment elle se répand dans l'organisme. Nous aborderons ensuite les traitements actuels. Enfin, nous examinerons de plus près le fonctionnement d'un scanner; les scanners constituant le seul et unique support d'informations médicales dont nous disposons. 
+\mylettrine{L}{a} biologie du cancer est encore à ce jour non entièrement connue. Sa complexité n'étant pas des moindres, on présentera dans ce chapitre uniquement les points clés nécéssaire à l'élaboration des modèles mathématiques présentés dans ce manuscrit. On présentera tout d'abord sommairement comment croît une tumeur, puis comment elle se répand dans l'organisme. Nous aborderons ensuite les traitements actuels. Puis nous examinerons de plus près le fonctionnement d'un scanner; les scanners constituant le seul et unique support d'informations médicales dont nous disposons. Enfin, la manière dont on évalue les réponses au traitement (le critère RECIST) sera présentée.
 
 \section{Croissance tumorale}
 %\todo[noline]{La tumeur en grandissant, va pousser vers l'extérieur le réseau sanguin qui l'alimente ! (La tumeur exerçant une pression sur celui-ci) --> valable que pour les méta, tumeur primit = infiltrante}
@@ -52,7 +54,7 @@ ne peut cependant être utilisée que pour de petites tumeurs, ne dépassant pas
 \paragraph{La chimiothérapie} est un médicamment \emph{cytotoxique} (\ie qui détruit les cellules) administré en intraveineuse. 
 Ce type de molécules est suffisament petit pour pénétrer à l'intérieur des cellules. Elle agit sur toutes les cellules en division trop rapide en affectant soit directement la mitose, soit la duplication de l'ADN. Ceci explique ses principaux effets secondaires car elle va impacter aussi sur des cellules saines à division naturellement rapide comme les cellules responsables de la pousse des cheveux, les cellules intestinales (de l'épithélium), les cellules sanguines (à l'origine d'affaiblissement du système immunitaire et d'anémies notamment) ou encore les gamètes.
 
-\paragraph{Les thérapies ciblées}\todo[noline]{section RECIST ?} sont également des médicamments administrés par voies intraveineuses. Des versions systémiques commencent également à voir le jour (\ie sous forme de comprimés à prendre à heures fixes). Bien qu'étant diffusées dans tout l'organisme, ces thérapies  ciblent un type spécifique de voie moléculaire (ou de récepteur), voie moléculaire généralement caratéristique des cellules malignes. Ce peut être des anticorps (X-mab) ou bien de petites molécules ciblant les fonctions tyrosines kinases (X-inib), fonctions impliquées dans l'activité cellulaire et la mitose. 
+\paragraph{Les thérapies ciblées} sont également des médicamments administrés par voies intraveineuses. Des versions systémiques commencent également à voir le jour (\ie sous forme de comprimés à prendre à heures fixes). Bien qu'étant diffusées dans tout l'organisme, ces thérapies  ciblent un type spécifique de voie moléculaire (ou de récepteur), voie moléculaire généralement caratéristique des cellules malignes. Ce peut être des anticorps (X-mab) ou bien de petites molécules ciblant les fonctions tyrosines kinases (X-inib), fonctions impliquées dans l'activité cellulaire et la mitose. 
 
 En exemple on pourra citer l'\emph{imatinib} (Glivec) qui se fixe sur les récepteurs cellulaires (récepteurs de tyrosine kinase, RTK) commandant l'activité intra cellulaire. En inhibant ces récepteurs, l'apoptose tend à se réactiver dans les cellules défectueuses. On peut également citer le \emph{bevacizumab} (Avastin), qui inhibe l'angiogenèse, en se fixant sur les récepteurs de VEGF (que l'on abrège communément VEGFR). D'autres molécules, comme  le sorafenib ou le sunitinib, ont des effets multiples. 
 Le \emph{sorafenib} (Nexavar) est un inhibiteur, à la fois, de VEGFR et de Raf-kinase (tyrosine kinase intervenant dans la cascade de kinases activées lors de la mitose). 
@@ -142,9 +144,12 @@ Revenons au PCI. Dans la mesure où il y a deux voies sanguine pour accéder au 
 \item Le \emph{temps portal.} C'est le temps après l'injection, que le PCI met pour parvenir au foie par la voie portale. Il est d'environ 70 secondes. 
 \end{myitemize}
 Les scanners réalisés avec PCI, sont effectués au temps portal. Ainsi au moment de l'acquisition de l'image, le PCI se trouve majoritairement dans les tissus vascularisées par la voie portale \ie le foie sain. Le tissu tumoral, beaucoup moins irriguer par voie portal contiendra donc nettement moins de PCI. Ceci se traduit directement sur le contraste de l'image médicale~: le tissu sain ayant fortement éclaircit, le tissu tumoral apparait de manière beaucoup plus évidente, en sombre. On pourra même distinguer des nuances au sein même de la tumeur (entre le centre et le pourtour notamment), ce qui va particulièrement nous intéressé pour tout ce qui concerne l'\hetero tumorale. L'ensemble des scanners présentés dans cet ouvrage a été réalisé avec un PCI.
-\begin{myenumerate}
-\item hep
-\item hop
-\end{myenumerate}
+
+\section{Evaluation clinique de la réponse au traitement~: le critère RECIST}
+La surveillance des patients ayant des métastases hépatiques de GIST est assuré grâce à des scanners avec PCI réalisés environ tous les 2 mois. Ainsi, tous les 2 mois, les médecins acquièrent une série d'images en niveaux de gris, chaque image représentant une coupe transversale du thorax du patient. Les images que nous possédons, ont une résolution de $512\times512$ pixels, et chaque image est espacé d'environ $1mm$, ce qui représente environ 800 images par scanners du thorax. Le foie est présent sur environ 200 de ces coupes. Ceci représente donc un nombre importants de pixels. Ainsi pour évaluer la progression de la tumeur, il est nécessaire d'avoir un critère, qui permet de synthétiser les informations apportés par tout ces nombreux pixels. Le criitère RECIST (de l'anglais Response Evaluation Criteria In Solid Tumors) est actuellement utilisé. Il consiste à ne retenir de chaque scanner qu'une seule et unique information~: le diamètre de la métastase (ou de la plus grosse des métastases si le patient en a plusieurs). Si ce diamètre décroît ou est stable, alors on considère le traitement efficace. S'il augmente de plus de 10\,\%, alors l'échec thérapeutique est considéré (et dans ce cas là, le traitement est alors changé). Ce critère  a l'avantage d'être simple. Ceci étant, il a déjà démontré ces limites \cf. \url{http://jco.ascopubs.org/content/25/13/1760.full}, principalement dans l'évaluation d'efficacité de traitement antiangiogénique qui font apparaître beaucoup de nécrose. 
+D'autres critères sont à l'étude, dont le critère Choi notamment, qui prend en compte aussi les densités internes de la métastase. 
+
+
+Dans le chapitre suivant, nous allons construire un modèle mathématique qui simule la croissance d'une tumeur. Ce modèle qui se démarque des précédents modèles notamment par son caractère spatial, soulignera particulièrement l'importance de la prise en compte des densités (caractère homogène ou \heterogene) dans l'évaluation de la réponse aux traitements dans le cas de métastases hépatiques de GIST.
 
 \end{document}
